--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,6 +56,7 @@
      <Compile Include="Assets\Scripts\Egg.cs" />
      <Compile Include="Assets\Scripts\EggCollector.cs" />
      <Compile Include="Assets\Scripts\IKControl.cs" />
+     <Compile Include="Assets\Scripts\playAudioClipOnTrigger.cs" />
      <Compile Include="Assets\Scripts\playEggBounceAudio.cs" />
      <Compile Include="Assets\Scripts\ThirdPersonFootsteps.cs" />
      <Compile Include="Assets\Sketchfab Exporter\ExporterSKFB.cs" />
