--- a/Assembly-CSharp-Editor-firstpass.csproj
+++ b/Assembly-CSharp-Editor-firstpass.csproj
@@ -235,6 +235,12 @@
  <Reference Include="UnityEditor.Graphs">
  <HintPath>/Applications/Unity/Unity.app/Contents/Managed/UnityEditor.Graphs.dll</HintPath>
  </Reference>
+ <Reference Include="UnityEditor.Android.Extensions">
+ <HintPath>/Applications/Unity/PlaybackEngines/AndroidPlayer/UnityEditor.Android.Extensions.dll</HintPath>
+ </Reference>
+ <Reference Include="UnityEditor.iOS.Extensions">
+ <HintPath>/Applications/Unity/PlaybackEngines/iOSSupport/UnityEditor.iOS.Extensions.dll</HintPath>
+ </Reference>
  <Reference Include="UnityEditor.WebGL.Extensions">
  <HintPath>/Applications/Unity/PlaybackEngines/WebGLSupport/UnityEditor.WebGL.Extensions.dll</HintPath>
  </Reference>
@@ -242,10 +248,10 @@
  <HintPath>/Applications/Unity/Unity.app/Contents/PlaybackEngines/MacStandaloneSupport/UnityEditor.OSXStandalone.Extensions.dll</HintPath>
  </Reference>
  <Reference Include="Ionic.Zip">
- <HintPath>/Users/merlincita/GitHub/linabelina-assets/Assets/Sketchfab Exporter/Dependancies/Ionic.Zip.dll</HintPath>
+ <HintPath>/Users/jay/Documents/Art/Projects/linabelina/repos/linabelina-assets/Assets/Sketchfab Exporter/Dependancies/Ionic.Zip.dll</HintPath>
  </Reference>
  <Reference Include="System.Drawing">
- <HintPath>/Users/merlincita/GitHub/linabelina-assets/Assets/Sketchfab Exporter/Dependancies/System.Drawing.dll</HintPath>
+ <HintPath>/Users/jay/Documents/Art/Projects/linabelina/repos/linabelina-assets/Assets/Sketchfab Exporter/Dependancies/System.Drawing.dll</HintPath>
  </Reference>
   </ItemGroup>
   <ItemGroup>
