[JA] Added animation layer and avatar mask for lina so that she can reach out and drop eggs from pocket with 'R' key while moving around - deleted old avatars

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
      <Compile Include="Assets\animations\hopping-tree\scripts\treeBend.cs" />
      <Compile Include="Assets\pickupObject.cs" />
+     <Compile Include="Assets\PickupObjects.cs" />
      <Compile Include="Assets\Scripts\chicken.cs" />
      <Compile Include="Assets\Scripts\EasyFadeIn.cs" />
      <Compile Include="Assets\Scripts\Egg.cs" />
